--- a/paper/references.bib
+++ b/paper/references.bib
@@ -86,19 +86,6 @@ https://github.com/haozhu233/kableExtra},
 }
 
 
-
-
-
-
-@Misc{rstanarm,
-    title = {rstanarm: {Bayesian} applied regression modeling via {Stan}},
-    author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
-    note = {R package version 2.21.3},
-    year = {2022},
-    url = {https://mc-stan.org/rstanarm/},
-  }
-  
-
 @Manual{pudding,
   title = {Womens´s Pockets are Inferior},
   author = {Jan Diehm,Amber Thomas},
@@ -112,4 +99,25 @@ https://github.com/haozhu233/kableExtra},
   author = {Keena Alwahaidi},
   year = {2018},
   note = {https://www.cbc.ca/radio/thecurrent/womens-apparel-doesn-t-have-enough-pockets-1.7071091},
+}
+
+@Manual{mydoh,
+  title = {WHAT IS THE PINK TAX? A GUIDE FOR TEENS},
+  author = {Brianna Taylor},
+  year = {2023},
+  note = {https://www.mydoh.ca/learn/blog/lifestyle/what-is-the-pink-tax-a-guide-for-teens/},
+}
+
+@Manual{forbes,
+  title = {Why Do Retailers Charge Women More Than Men? Because They Can},
+  author = {Tim Worstall},
+  year = {2016},
+  note = {https://www.forbes.com/sites/timworstall/2016/01/20/why-do-retailers-charge-women-more-than-men-because-they-can/?sh=787ea1f2a6e3},
+}
+
+@Manual{blackcurve,
+  title = {Why Women Pay More than Men For Products},
+  author = {Moira McCormick },
+  year = {2023},
+  note = {https://www.forbes.com/sites/timworstall/2016/01/20/why-do-retailers-charge-women-more-than-men-because-they-can/?sh=787ea1f2a6e3},
 }
