--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -157,6 +157,8 @@ men_jeans_plot
 # Standard deviation of price for men's jeans
 men_price_sd <- sd(men_jeans_data$price)
 
+# Code referenced from: https://chat.openai.com/
+
 # Calculate the average price for men's jeans
 men_avg_price <- mean(men_jeans_data$price)
 
@@ -176,6 +178,8 @@ women_jeans_plot
 
 # Standard deviation of price for women's jeans
 women_price_sd <- sd(women_jeans_data$price)
+
+# Code referenced from: https://chat.openai.com/
 
 # Calculate the average price for women's jeans
 women_avg_price <- mean(women_jeans_data$price)
